<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373447">
    <com.xbw.unman.Utils.MyVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="UNMAN"
        android:id="@+id/textView"
        android:textSize="64dp"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView">
    <LinearLayout
        android:id="@+id/accountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_user" />

        <EditText
            android:id="@+id/chat_login_username"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/edit_username"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#CEC9E7"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="240dp"
        android:layout_height="1dp"
        android:layout_below="@id/accountLayout"
        android:layout_centerHorizontal="true"
        android:background="#CEC9E7" />

    <LinearLayout
        android:id="@+id/pwdLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_pwd" />

        <EditText
            android:id="@+id/chat_login_password"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#CEC9E7"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="240dp"
        android:layout_height="1dp"
        android:layout_below="@id/pwdLayout"
        android:layout_centerHorizontal="true"
        android:background="#CEC9E7" />

    <Button
        android:id="@+id/chat_login_signin_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/button_login"
        android:textColor="#CEC9E7"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/chat_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/chat_login_signin_btn"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:text="@string/login_go_sign_up"
        android:textColor="#CEC9E7"
        android:textSize="14sp" />

    <Button
        android:id="@+id/chat_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chat_login_signin_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:text="@string/login_forget_password"
        android:textColor="#CEC9E7"
        android:textSize="14sp" />
    </RelativeLayout>
</RelativeLayout>